fixed alignment on requirements page
stopped buttons overlapping text

--- a/css/app.scss
+++ b/css/app.scss
@@ -133,7 +133,7 @@ a {
 #requirements {
 	background-color: #AF2C00;
 	padding: $padding;
-	height: 100vh;
+	min-height: 100vh;
 
 	.requirements-inner {
 		background-color: #E9501E;
@@ -160,10 +160,11 @@ a {
 		}
 
 		.requirements-buttons {
-			position: absolute;
-			left: $padding*2;
-			right: $padding*2;
-			bottom: $padding*2;
+			padding-top: $padding*2;
+			// position: absolute;
+			// left: $padding*2;
+			// right: $padding*2;
+			// bottom: $padding*2;
 		}
 	}
 }
